--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.6",
-    "router": "^1.3.6"
+    "helmet": "^5.0.2",
+    "mongoose": "^6.2.8",
+    "morgan": "^1.10.0",
+    "router": "^1.3.6",
+    "validator": "^13.7.0"
   }
 }
