--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "env-cmd -f ./configs/dev.env nodemon index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon index.js"
   },
   "repository": {
     "type": "git",
